[project]
name = "comfyui-env"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "comfyui-frontend-package==1.39.19",
  "comfyui-workflow-templates==0.9.4",
  "comfyui-embedded-docs==0.4.3",
  "torch",
  "torchsde",
  "torchvision",
  "torchaudio",
  "numpy>=1.25.0",
  "einops",
  "transformers>=4.50.3",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.2",
  "aiohttp>=3.11.8",
  "yarl>=1.18.0",
  "pyyaml",
  "Pillow",
  "scipy",
  "tqdm",
  "psutil",
  "alembic",
  "SQLAlchemy",
  "av>=14.2.0",
  "comfy-kitchen>=0.2.7",
  "comfy-aimdo>=0.2.3",
  "requests",
  "kornia>=0.7.1",
  "spandrel",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  "PyOpenGL",
  "glfw",
]

[project.optional-dependencies]
manager = [
  "comfyui_manager==4.1b1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
