[project]
name = "comfyui-env"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "comfyui-frontend-package==1.41.21",
  "comfyui-workflow-templates==0.9.26",
  "comfyui-embedded-docs==0.4.3",
  "torch",
  "torchsde",
  "torchvision",
  "torchaudio",
  "numpy>=1.25.0",
  "einops",
  "transformers>=4.50.3",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.2",
  "aiohttp>=3.11.8",
  "yarl>=1.18.0",
  "pyyaml",
  "Pillow",
  "scipy",
  "tqdm",
  "psutil",
  "alembic",
  "SQLAlchemy",
  "av>=14.2.0",
  "comfy-kitchen>=0.2.8",
  "comfy-aimdo>=0.2.12",
  "requests",
  "kornia>=0.7.1",
  "spandrel",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  "PyOpenGL",
  "glfw",
  "simpleeval>=1.0.0",
  "blake3>=1.0.8",
  "filelock>=3.25.0",
]

[project.optional-dependencies]
manager = [
  "comfyui-manager==4.1b6",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
